src/d-jump/source/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> list_complete_item
Rule 1     list_complete_item -> complete_item
Rule 2     list_complete_item -> list_complete_item complete_item
Rule 3     complete_item -> complete_settings
Rule 4     complete_item -> complete_rule
Rule 5     complete_item -> complete_component
Rule 6     complete_item -> complete_default
Rule 7     complete_settings -> settings_header name opcode_format includes arguments settings_footer
Rule 8     settings_header -> LBRACKET SETTINGS RBRACKET NEWLINE
Rule 9     name -> DASH NAMESPACE COLON IDENTIFIER NEWLINE
Rule 10    opcode_format -> DASH OPCODE_FORMAT COLON list_formatted_binary_item NEWLINE
Rule 11    includes -> DASH INCLUDES COLON list_includes NEWLINE
Rule 12    list_includes -> IDENTIFIER
Rule 13    list_includes -> list_includes IDENTIFIER
Rule 14    arguments -> DASH ARGUMENTS COLON list_arguments NEWLINE
Rule 15    list_arguments -> IDENTIFIER
Rule 16    list_arguments -> list_arguments IDENTIFIER
Rule 17    list_arguments -> <empty>
Rule 18    settings_footer -> LBRACKET SLASH SETTINGS RBRACKET NEWLINE
Rule 19    complete_rule -> rule_header list_rule_component rule_footer
Rule 20    rule_header -> LBRACKET RULE IDENTIFIER RBRACKET NEWLINE
Rule 21    list_rule_component -> rule_component
Rule 22    list_rule_component -> list_rule_component rule_component
Rule 23    rule_component -> include_statement
Rule 24    rule_component -> exclude_statement
Rule 25    rule_component -> component_statement
Rule 26    include_statement -> DASH INCLUDE COLON list_binary_item NEWLINE
Rule 27    list_binary_item -> binary_item
Rule 28    list_binary_item -> list_binary_item binary_item
Rule 29    binary_item -> BINARY
Rule 30    binary_item -> DASH
Rule 31    exclude_statement -> DASH EXCLUDE COLON list_binary_item NEWLINE
Rule 32    component_statement -> DASH COMPONENT COLON IDENTIFIER NEWLINE
Rule 33    rule_footer -> LBRACKET SLASH RULE RBRACKET NEWLINE
Rule 34    complete_component -> component_header format_statement code_statement component_footer
Rule 35    component_header -> LBRACKET COMPONENT IDENTIFIER RBRACKET NEWLINE
Rule 36    format_statement -> DASH FORMAT COLON list_formatted_binary_item NEWLINE
Rule 37    code_statement -> LCURLY NEWLINE list_cplusplus RCURLY NEWLINE
Rule 38    list_cplusplus -> WHITESPACE CPLUSPLUS NEWLINE
Rule 39    list_cplusplus -> WHITESPACE IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE
Rule 40    list_cplusplus -> list_cplusplus WHITESPACE CPLUSPLUS NEWLINE
Rule 41    list_cplusplus -> list_cplusplus WHITESPACE IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE
Rule 42    list_bitvariable -> bitvariable
Rule 43    list_bitvariable -> list_bitvariable bitvariable
Rule 44    bitvariable -> TRUE_BITVARIABLE
Rule 45    bitvariable -> FALSE_BITVARIABLE
Rule 46    list_formatted_binary_item -> formatted_binary_item
Rule 47    list_formatted_binary_item -> list_formatted_binary_item formatted_binary_item
Rule 48    formatted_binary_item -> binary_item
Rule 49    formatted_binary_item -> BINARY_VARIABLE
Rule 50    component_footer -> LBRACKET SLASH COMPONENT RBRACKET NEWLINE
Rule 51    complete_default -> default_header code_statement default_footer
Rule 52    default_header -> LBRACKET DEFAULT RBRACKET NEWLINE
Rule 53    default_footer -> LBRACKET SLASH DEFAULT RBRACKET NEWLINE

Terminals, with rules where they appear

ARGUMENTS            : 14
BINARY               : 29
BINARY_VARIABLE      : 49
COLON                : 9 10 11 14 26 31 32 36
COMPONENT            : 32 35 50
CPLUSPLUS            : 38 39 40 41
DASH                 : 9 10 11 14 26 30 31 32 36
DEFAULT              : 52 53
EXCLUDE              : 31
FALSE_BITVARIABLE    : 45
FORMAT               : 36
IDENTIFIER           : 9 12 13 15 16 20 32 35
IF_BEGIN             : 39 41
IF_END               : 39 41
INCLUDE              : 26
INCLUDES             : 11
LBRACKET             : 8 18 20 33 35 50 52 53
LCURLY               : 37
NAMESPACE            : 9
NEWLINE              : 8 9 10 11 14 18 20 26 31 32 33 35 36 37 37 38 39 40 41 50 52 53
OPCODE_FORMAT        : 10
RBRACKET             : 8 18 20 33 35 50 52 53
RCURLY               : 37
RULE                 : 20 33
SETTINGS             : 8 18
SLASH                : 18 33 50 53
TRUE_BITVARIABLE     : 44
WHITESPACE           : 38 39 40 41
error                : 

Nonterminals, with rules where they appear

arguments            : 7
binary_item          : 27 28 48
bitvariable          : 42 43
code_statement       : 34 51
complete_component   : 5
complete_default     : 6
complete_item        : 1 2
complete_rule        : 4
complete_settings    : 3
component_footer     : 34
component_header     : 34
component_statement  : 25
default_footer       : 51
default_header       : 51
exclude_statement    : 24
format_statement     : 34
formatted_binary_item : 46 47
include_statement    : 23
includes             : 7
list_arguments       : 14 16
list_binary_item     : 26 28 31
list_bitvariable     : 39 41 43
list_complete_item   : 2 0
list_cplusplus       : 37 40 41
list_formatted_binary_item : 10 36 47
list_includes        : 11 13
list_rule_component  : 19 22
name                 : 7
opcode_format        : 7
rule_component       : 21 22
rule_footer          : 19
rule_header          : 19
settings_footer      : 7
settings_header      : 7

Parsing method: LALR

state 0

    (0) S' -> . list_complete_item
    (1) list_complete_item -> . complete_item
    (2) list_complete_item -> . list_complete_item complete_item
    (3) complete_item -> . complete_settings
    (4) complete_item -> . complete_rule
    (5) complete_item -> . complete_component
    (6) complete_item -> . complete_default
    (7) complete_settings -> . settings_header name opcode_format includes arguments settings_footer
    (19) complete_rule -> . rule_header list_rule_component rule_footer
    (34) complete_component -> . component_header format_statement code_statement component_footer
    (51) complete_default -> . default_header code_statement default_footer
    (8) settings_header -> . LBRACKET SETTINGS RBRACKET NEWLINE
    (20) rule_header -> . LBRACKET RULE IDENTIFIER RBRACKET NEWLINE
    (35) component_header -> . LBRACKET COMPONENT IDENTIFIER RBRACKET NEWLINE
    (52) default_header -> . LBRACKET DEFAULT RBRACKET NEWLINE

    LBRACKET        shift and go to state 11

    list_complete_item             shift and go to state 1
    complete_item                  shift and go to state 2
    complete_settings              shift and go to state 3
    complete_rule                  shift and go to state 4
    complete_component             shift and go to state 5
    complete_default               shift and go to state 6
    settings_header                shift and go to state 7
    rule_header                    shift and go to state 8
    component_header               shift and go to state 9
    default_header                 shift and go to state 10

state 1

    (0) S' -> list_complete_item .
    (2) list_complete_item -> list_complete_item . complete_item
    (3) complete_item -> . complete_settings
    (4) complete_item -> . complete_rule
    (5) complete_item -> . complete_component
    (6) complete_item -> . complete_default
    (7) complete_settings -> . settings_header name opcode_format includes arguments settings_footer
    (19) complete_rule -> . rule_header list_rule_component rule_footer
    (34) complete_component -> . component_header format_statement code_statement component_footer
    (51) complete_default -> . default_header code_statement default_footer
    (8) settings_header -> . LBRACKET SETTINGS RBRACKET NEWLINE
    (20) rule_header -> . LBRACKET RULE IDENTIFIER RBRACKET NEWLINE
    (35) component_header -> . LBRACKET COMPONENT IDENTIFIER RBRACKET NEWLINE
    (52) default_header -> . LBRACKET DEFAULT RBRACKET NEWLINE

    LBRACKET        shift and go to state 11

    complete_item                  shift and go to state 12
    complete_settings              shift and go to state 3
    complete_rule                  shift and go to state 4
    complete_component             shift and go to state 5
    complete_default               shift and go to state 6
    settings_header                shift and go to state 7
    rule_header                    shift and go to state 8
    component_header               shift and go to state 9
    default_header                 shift and go to state 10

state 2

    (1) list_complete_item -> complete_item .

    LBRACKET        reduce using rule 1 (list_complete_item -> complete_item .)
    $end            reduce using rule 1 (list_complete_item -> complete_item .)


state 3

    (3) complete_item -> complete_settings .

    LBRACKET        reduce using rule 3 (complete_item -> complete_settings .)
    $end            reduce using rule 3 (complete_item -> complete_settings .)


state 4

    (4) complete_item -> complete_rule .

    LBRACKET        reduce using rule 4 (complete_item -> complete_rule .)
    $end            reduce using rule 4 (complete_item -> complete_rule .)


state 5

    (5) complete_item -> complete_component .

    LBRACKET        reduce using rule 5 (complete_item -> complete_component .)
    $end            reduce using rule 5 (complete_item -> complete_component .)


state 6

    (6) complete_item -> complete_default .

    LBRACKET        reduce using rule 6 (complete_item -> complete_default .)
    $end            reduce using rule 6 (complete_item -> complete_default .)


state 7

    (7) complete_settings -> settings_header . name opcode_format includes arguments settings_footer
    (9) name -> . DASH NAMESPACE COLON IDENTIFIER NEWLINE

    DASH            shift and go to state 14

    name                           shift and go to state 13

state 8

    (19) complete_rule -> rule_header . list_rule_component rule_footer
    (21) list_rule_component -> . rule_component
    (22) list_rule_component -> . list_rule_component rule_component
    (23) rule_component -> . include_statement
    (24) rule_component -> . exclude_statement
    (25) rule_component -> . component_statement
    (26) include_statement -> . DASH INCLUDE COLON list_binary_item NEWLINE
    (31) exclude_statement -> . DASH EXCLUDE COLON list_binary_item NEWLINE
    (32) component_statement -> . DASH COMPONENT COLON IDENTIFIER NEWLINE

    DASH            shift and go to state 20

    list_rule_component            shift and go to state 15
    rule_component                 shift and go to state 16
    include_statement              shift and go to state 17
    exclude_statement              shift and go to state 18
    component_statement            shift and go to state 19

state 9

    (34) complete_component -> component_header . format_statement code_statement component_footer
    (36) format_statement -> . DASH FORMAT COLON list_formatted_binary_item NEWLINE

    DASH            shift and go to state 22

    format_statement               shift and go to state 21

state 10

    (51) complete_default -> default_header . code_statement default_footer
    (37) code_statement -> . LCURLY NEWLINE list_cplusplus RCURLY NEWLINE

    LCURLY          shift and go to state 24

    code_statement                 shift and go to state 23

state 11

    (8) settings_header -> LBRACKET . SETTINGS RBRACKET NEWLINE
    (20) rule_header -> LBRACKET . RULE IDENTIFIER RBRACKET NEWLINE
    (35) component_header -> LBRACKET . COMPONENT IDENTIFIER RBRACKET NEWLINE
    (52) default_header -> LBRACKET . DEFAULT RBRACKET NEWLINE

    SETTINGS        shift and go to state 25
    RULE            shift and go to state 26
    COMPONENT       shift and go to state 27
    DEFAULT         shift and go to state 28


state 12

    (2) list_complete_item -> list_complete_item complete_item .

    LBRACKET        reduce using rule 2 (list_complete_item -> list_complete_item complete_item .)
    $end            reduce using rule 2 (list_complete_item -> list_complete_item complete_item .)


state 13

    (7) complete_settings -> settings_header name . opcode_format includes arguments settings_footer
    (10) opcode_format -> . DASH OPCODE_FORMAT COLON list_formatted_binary_item NEWLINE

    DASH            shift and go to state 30

    opcode_format                  shift and go to state 29

state 14

    (9) name -> DASH . NAMESPACE COLON IDENTIFIER NEWLINE

    NAMESPACE       shift and go to state 31


state 15

    (19) complete_rule -> rule_header list_rule_component . rule_footer
    (22) list_rule_component -> list_rule_component . rule_component
    (33) rule_footer -> . LBRACKET SLASH RULE RBRACKET NEWLINE
    (23) rule_component -> . include_statement
    (24) rule_component -> . exclude_statement
    (25) rule_component -> . component_statement
    (26) include_statement -> . DASH INCLUDE COLON list_binary_item NEWLINE
    (31) exclude_statement -> . DASH EXCLUDE COLON list_binary_item NEWLINE
    (32) component_statement -> . DASH COMPONENT COLON IDENTIFIER NEWLINE

    LBRACKET        shift and go to state 34
    DASH            shift and go to state 20

    rule_footer                    shift and go to state 32
    rule_component                 shift and go to state 33
    include_statement              shift and go to state 17
    exclude_statement              shift and go to state 18
    component_statement            shift and go to state 19

state 16

    (21) list_rule_component -> rule_component .

    LBRACKET        reduce using rule 21 (list_rule_component -> rule_component .)
    DASH            reduce using rule 21 (list_rule_component -> rule_component .)


state 17

    (23) rule_component -> include_statement .

    LBRACKET        reduce using rule 23 (rule_component -> include_statement .)
    DASH            reduce using rule 23 (rule_component -> include_statement .)


state 18

    (24) rule_component -> exclude_statement .

    LBRACKET        reduce using rule 24 (rule_component -> exclude_statement .)
    DASH            reduce using rule 24 (rule_component -> exclude_statement .)


state 19

    (25) rule_component -> component_statement .

    LBRACKET        reduce using rule 25 (rule_component -> component_statement .)
    DASH            reduce using rule 25 (rule_component -> component_statement .)


state 20

    (26) include_statement -> DASH . INCLUDE COLON list_binary_item NEWLINE
    (31) exclude_statement -> DASH . EXCLUDE COLON list_binary_item NEWLINE
    (32) component_statement -> DASH . COMPONENT COLON IDENTIFIER NEWLINE

    INCLUDE         shift and go to state 35
    EXCLUDE         shift and go to state 36
    COMPONENT       shift and go to state 37


state 21

    (34) complete_component -> component_header format_statement . code_statement component_footer
    (37) code_statement -> . LCURLY NEWLINE list_cplusplus RCURLY NEWLINE

    LCURLY          shift and go to state 24

    code_statement                 shift and go to state 38

state 22

    (36) format_statement -> DASH . FORMAT COLON list_formatted_binary_item NEWLINE

    FORMAT          shift and go to state 39


state 23

    (51) complete_default -> default_header code_statement . default_footer
    (53) default_footer -> . LBRACKET SLASH DEFAULT RBRACKET NEWLINE

    LBRACKET        shift and go to state 41

    default_footer                 shift and go to state 40

state 24

    (37) code_statement -> LCURLY . NEWLINE list_cplusplus RCURLY NEWLINE

    NEWLINE         shift and go to state 42


state 25

    (8) settings_header -> LBRACKET SETTINGS . RBRACKET NEWLINE

    RBRACKET        shift and go to state 43


state 26

    (20) rule_header -> LBRACKET RULE . IDENTIFIER RBRACKET NEWLINE

    IDENTIFIER      shift and go to state 44


state 27

    (35) component_header -> LBRACKET COMPONENT . IDENTIFIER RBRACKET NEWLINE

    IDENTIFIER      shift and go to state 45


state 28

    (52) default_header -> LBRACKET DEFAULT . RBRACKET NEWLINE

    RBRACKET        shift and go to state 46


state 29

    (7) complete_settings -> settings_header name opcode_format . includes arguments settings_footer
    (11) includes -> . DASH INCLUDES COLON list_includes NEWLINE

    DASH            shift and go to state 48

    includes                       shift and go to state 47

state 30

    (10) opcode_format -> DASH . OPCODE_FORMAT COLON list_formatted_binary_item NEWLINE

    OPCODE_FORMAT   shift and go to state 49


state 31

    (9) name -> DASH NAMESPACE . COLON IDENTIFIER NEWLINE

    COLON           shift and go to state 50


state 32

    (19) complete_rule -> rule_header list_rule_component rule_footer .

    LBRACKET        reduce using rule 19 (complete_rule -> rule_header list_rule_component rule_footer .)
    $end            reduce using rule 19 (complete_rule -> rule_header list_rule_component rule_footer .)


state 33

    (22) list_rule_component -> list_rule_component rule_component .

    LBRACKET        reduce using rule 22 (list_rule_component -> list_rule_component rule_component .)
    DASH            reduce using rule 22 (list_rule_component -> list_rule_component rule_component .)


state 34

    (33) rule_footer -> LBRACKET . SLASH RULE RBRACKET NEWLINE

    SLASH           shift and go to state 51


state 35

    (26) include_statement -> DASH INCLUDE . COLON list_binary_item NEWLINE

    COLON           shift and go to state 52


state 36

    (31) exclude_statement -> DASH EXCLUDE . COLON list_binary_item NEWLINE

    COLON           shift and go to state 53


state 37

    (32) component_statement -> DASH COMPONENT . COLON IDENTIFIER NEWLINE

    COLON           shift and go to state 54


state 38

    (34) complete_component -> component_header format_statement code_statement . component_footer
    (50) component_footer -> . LBRACKET SLASH COMPONENT RBRACKET NEWLINE

    LBRACKET        shift and go to state 56

    component_footer               shift and go to state 55

state 39

    (36) format_statement -> DASH FORMAT . COLON list_formatted_binary_item NEWLINE

    COLON           shift and go to state 57


state 40

    (51) complete_default -> default_header code_statement default_footer .

    LBRACKET        reduce using rule 51 (complete_default -> default_header code_statement default_footer .)
    $end            reduce using rule 51 (complete_default -> default_header code_statement default_footer .)


state 41

    (53) default_footer -> LBRACKET . SLASH DEFAULT RBRACKET NEWLINE

    SLASH           shift and go to state 58


state 42

    (37) code_statement -> LCURLY NEWLINE . list_cplusplus RCURLY NEWLINE
    (38) list_cplusplus -> . WHITESPACE CPLUSPLUS NEWLINE
    (39) list_cplusplus -> . WHITESPACE IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE
    (40) list_cplusplus -> . list_cplusplus WHITESPACE CPLUSPLUS NEWLINE
    (41) list_cplusplus -> . list_cplusplus WHITESPACE IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE

    WHITESPACE      shift and go to state 60

    list_cplusplus                 shift and go to state 59

state 43

    (8) settings_header -> LBRACKET SETTINGS RBRACKET . NEWLINE

    NEWLINE         shift and go to state 61


state 44

    (20) rule_header -> LBRACKET RULE IDENTIFIER . RBRACKET NEWLINE

    RBRACKET        shift and go to state 62


state 45

    (35) component_header -> LBRACKET COMPONENT IDENTIFIER . RBRACKET NEWLINE

    RBRACKET        shift and go to state 63


state 46

    (52) default_header -> LBRACKET DEFAULT RBRACKET . NEWLINE

    NEWLINE         shift and go to state 64


state 47

    (7) complete_settings -> settings_header name opcode_format includes . arguments settings_footer
    (14) arguments -> . DASH ARGUMENTS COLON list_arguments NEWLINE

    DASH            shift and go to state 66

    arguments                      shift and go to state 65

state 48

    (11) includes -> DASH . INCLUDES COLON list_includes NEWLINE

    INCLUDES        shift and go to state 67


state 49

    (10) opcode_format -> DASH OPCODE_FORMAT . COLON list_formatted_binary_item NEWLINE

    COLON           shift and go to state 68


state 50

    (9) name -> DASH NAMESPACE COLON . IDENTIFIER NEWLINE

    IDENTIFIER      shift and go to state 69


state 51

    (33) rule_footer -> LBRACKET SLASH . RULE RBRACKET NEWLINE

    RULE            shift and go to state 70


state 52

    (26) include_statement -> DASH INCLUDE COLON . list_binary_item NEWLINE
    (27) list_binary_item -> . binary_item
    (28) list_binary_item -> . list_binary_item binary_item
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    list_binary_item               shift and go to state 72
    binary_item                    shift and go to state 73

state 53

    (31) exclude_statement -> DASH EXCLUDE COLON . list_binary_item NEWLINE
    (27) list_binary_item -> . binary_item
    (28) list_binary_item -> . list_binary_item binary_item
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    list_binary_item               shift and go to state 75
    binary_item                    shift and go to state 73

state 54

    (32) component_statement -> DASH COMPONENT COLON . IDENTIFIER NEWLINE

    IDENTIFIER      shift and go to state 76


state 55

    (34) complete_component -> component_header format_statement code_statement component_footer .

    LBRACKET        reduce using rule 34 (complete_component -> component_header format_statement code_statement component_footer .)
    $end            reduce using rule 34 (complete_component -> component_header format_statement code_statement component_footer .)


state 56

    (50) component_footer -> LBRACKET . SLASH COMPONENT RBRACKET NEWLINE

    SLASH           shift and go to state 77


state 57

    (36) format_statement -> DASH FORMAT COLON . list_formatted_binary_item NEWLINE
    (46) list_formatted_binary_item -> . formatted_binary_item
    (47) list_formatted_binary_item -> . list_formatted_binary_item formatted_binary_item
    (48) formatted_binary_item -> . binary_item
    (49) formatted_binary_item -> . BINARY_VARIABLE
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    BINARY_VARIABLE shift and go to state 81
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    list_formatted_binary_item     shift and go to state 78
    formatted_binary_item          shift and go to state 79
    binary_item                    shift and go to state 80

state 58

    (53) default_footer -> LBRACKET SLASH . DEFAULT RBRACKET NEWLINE

    DEFAULT         shift and go to state 82


state 59

    (37) code_statement -> LCURLY NEWLINE list_cplusplus . RCURLY NEWLINE
    (40) list_cplusplus -> list_cplusplus . WHITESPACE CPLUSPLUS NEWLINE
    (41) list_cplusplus -> list_cplusplus . WHITESPACE IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE

    RCURLY          shift and go to state 83
    WHITESPACE      shift and go to state 84


state 60

    (38) list_cplusplus -> WHITESPACE . CPLUSPLUS NEWLINE
    (39) list_cplusplus -> WHITESPACE . IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE

    CPLUSPLUS       shift and go to state 85
    IF_BEGIN        shift and go to state 86


state 61

    (8) settings_header -> LBRACKET SETTINGS RBRACKET NEWLINE .

    DASH            reduce using rule 8 (settings_header -> LBRACKET SETTINGS RBRACKET NEWLINE .)


state 62

    (20) rule_header -> LBRACKET RULE IDENTIFIER RBRACKET . NEWLINE

    NEWLINE         shift and go to state 87


state 63

    (35) component_header -> LBRACKET COMPONENT IDENTIFIER RBRACKET . NEWLINE

    NEWLINE         shift and go to state 88


state 64

    (52) default_header -> LBRACKET DEFAULT RBRACKET NEWLINE .

    LCURLY          reduce using rule 52 (default_header -> LBRACKET DEFAULT RBRACKET NEWLINE .)


state 65

    (7) complete_settings -> settings_header name opcode_format includes arguments . settings_footer
    (18) settings_footer -> . LBRACKET SLASH SETTINGS RBRACKET NEWLINE

    LBRACKET        shift and go to state 90

    settings_footer                shift and go to state 89

state 66

    (14) arguments -> DASH . ARGUMENTS COLON list_arguments NEWLINE

    ARGUMENTS       shift and go to state 91


state 67

    (11) includes -> DASH INCLUDES . COLON list_includes NEWLINE

    COLON           shift and go to state 92


state 68

    (10) opcode_format -> DASH OPCODE_FORMAT COLON . list_formatted_binary_item NEWLINE
    (46) list_formatted_binary_item -> . formatted_binary_item
    (47) list_formatted_binary_item -> . list_formatted_binary_item formatted_binary_item
    (48) formatted_binary_item -> . binary_item
    (49) formatted_binary_item -> . BINARY_VARIABLE
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    BINARY_VARIABLE shift and go to state 81
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    list_formatted_binary_item     shift and go to state 93
    formatted_binary_item          shift and go to state 79
    binary_item                    shift and go to state 80

state 69

    (9) name -> DASH NAMESPACE COLON IDENTIFIER . NEWLINE

    NEWLINE         shift and go to state 94


state 70

    (33) rule_footer -> LBRACKET SLASH RULE . RBRACKET NEWLINE

    RBRACKET        shift and go to state 95


state 71

    (30) binary_item -> DASH .

    NEWLINE         reduce using rule 30 (binary_item -> DASH .)
    BINARY          reduce using rule 30 (binary_item -> DASH .)
    DASH            reduce using rule 30 (binary_item -> DASH .)
    BINARY_VARIABLE reduce using rule 30 (binary_item -> DASH .)


state 72

    (26) include_statement -> DASH INCLUDE COLON list_binary_item . NEWLINE
    (28) list_binary_item -> list_binary_item . binary_item
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    NEWLINE         shift and go to state 96
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    binary_item                    shift and go to state 97

state 73

    (27) list_binary_item -> binary_item .

    NEWLINE         reduce using rule 27 (list_binary_item -> binary_item .)
    BINARY          reduce using rule 27 (list_binary_item -> binary_item .)
    DASH            reduce using rule 27 (list_binary_item -> binary_item .)


state 74

    (29) binary_item -> BINARY .

    NEWLINE         reduce using rule 29 (binary_item -> BINARY .)
    BINARY          reduce using rule 29 (binary_item -> BINARY .)
    DASH            reduce using rule 29 (binary_item -> BINARY .)
    BINARY_VARIABLE reduce using rule 29 (binary_item -> BINARY .)


state 75

    (31) exclude_statement -> DASH EXCLUDE COLON list_binary_item . NEWLINE
    (28) list_binary_item -> list_binary_item . binary_item
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    NEWLINE         shift and go to state 98
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    binary_item                    shift and go to state 97

state 76

    (32) component_statement -> DASH COMPONENT COLON IDENTIFIER . NEWLINE

    NEWLINE         shift and go to state 99


state 77

    (50) component_footer -> LBRACKET SLASH . COMPONENT RBRACKET NEWLINE

    COMPONENT       shift and go to state 100


state 78

    (36) format_statement -> DASH FORMAT COLON list_formatted_binary_item . NEWLINE
    (47) list_formatted_binary_item -> list_formatted_binary_item . formatted_binary_item
    (48) formatted_binary_item -> . binary_item
    (49) formatted_binary_item -> . BINARY_VARIABLE
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    NEWLINE         shift and go to state 101
    BINARY_VARIABLE shift and go to state 81
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    formatted_binary_item          shift and go to state 102
    binary_item                    shift and go to state 80

state 79

    (46) list_formatted_binary_item -> formatted_binary_item .

    NEWLINE         reduce using rule 46 (list_formatted_binary_item -> formatted_binary_item .)
    BINARY_VARIABLE reduce using rule 46 (list_formatted_binary_item -> formatted_binary_item .)
    BINARY          reduce using rule 46 (list_formatted_binary_item -> formatted_binary_item .)
    DASH            reduce using rule 46 (list_formatted_binary_item -> formatted_binary_item .)


state 80

    (48) formatted_binary_item -> binary_item .

    NEWLINE         reduce using rule 48 (formatted_binary_item -> binary_item .)
    BINARY_VARIABLE reduce using rule 48 (formatted_binary_item -> binary_item .)
    BINARY          reduce using rule 48 (formatted_binary_item -> binary_item .)
    DASH            reduce using rule 48 (formatted_binary_item -> binary_item .)


state 81

    (49) formatted_binary_item -> BINARY_VARIABLE .

    NEWLINE         reduce using rule 49 (formatted_binary_item -> BINARY_VARIABLE .)
    BINARY_VARIABLE reduce using rule 49 (formatted_binary_item -> BINARY_VARIABLE .)
    BINARY          reduce using rule 49 (formatted_binary_item -> BINARY_VARIABLE .)
    DASH            reduce using rule 49 (formatted_binary_item -> BINARY_VARIABLE .)


state 82

    (53) default_footer -> LBRACKET SLASH DEFAULT . RBRACKET NEWLINE

    RBRACKET        shift and go to state 103


state 83

    (37) code_statement -> LCURLY NEWLINE list_cplusplus RCURLY . NEWLINE

    NEWLINE         shift and go to state 104


state 84

    (40) list_cplusplus -> list_cplusplus WHITESPACE . CPLUSPLUS NEWLINE
    (41) list_cplusplus -> list_cplusplus WHITESPACE . IF_BEGIN list_bitvariable IF_END CPLUSPLUS NEWLINE

    CPLUSPLUS       shift and go to state 105
    IF_BEGIN        shift and go to state 106


state 85

    (38) list_cplusplus -> WHITESPACE CPLUSPLUS . NEWLINE

    NEWLINE         shift and go to state 107


state 86

    (39) list_cplusplus -> WHITESPACE IF_BEGIN . list_bitvariable IF_END CPLUSPLUS NEWLINE
    (42) list_bitvariable -> . bitvariable
    (43) list_bitvariable -> . list_bitvariable bitvariable
    (44) bitvariable -> . TRUE_BITVARIABLE
    (45) bitvariable -> . FALSE_BITVARIABLE

    TRUE_BITVARIABLE shift and go to state 110
    FALSE_BITVARIABLE shift and go to state 111

    list_bitvariable               shift and go to state 108
    bitvariable                    shift and go to state 109

state 87

    (20) rule_header -> LBRACKET RULE IDENTIFIER RBRACKET NEWLINE .

    DASH            reduce using rule 20 (rule_header -> LBRACKET RULE IDENTIFIER RBRACKET NEWLINE .)


state 88

    (35) component_header -> LBRACKET COMPONENT IDENTIFIER RBRACKET NEWLINE .

    DASH            reduce using rule 35 (component_header -> LBRACKET COMPONENT IDENTIFIER RBRACKET NEWLINE .)


state 89

    (7) complete_settings -> settings_header name opcode_format includes arguments settings_footer .

    LBRACKET        reduce using rule 7 (complete_settings -> settings_header name opcode_format includes arguments settings_footer .)
    $end            reduce using rule 7 (complete_settings -> settings_header name opcode_format includes arguments settings_footer .)


state 90

    (18) settings_footer -> LBRACKET . SLASH SETTINGS RBRACKET NEWLINE

    SLASH           shift and go to state 112


state 91

    (14) arguments -> DASH ARGUMENTS . COLON list_arguments NEWLINE

    COLON           shift and go to state 113


state 92

    (11) includes -> DASH INCLUDES COLON . list_includes NEWLINE
    (12) list_includes -> . IDENTIFIER
    (13) list_includes -> . list_includes IDENTIFIER

    IDENTIFIER      shift and go to state 115

    list_includes                  shift and go to state 114

state 93

    (10) opcode_format -> DASH OPCODE_FORMAT COLON list_formatted_binary_item . NEWLINE
    (47) list_formatted_binary_item -> list_formatted_binary_item . formatted_binary_item
    (48) formatted_binary_item -> . binary_item
    (49) formatted_binary_item -> . BINARY_VARIABLE
    (29) binary_item -> . BINARY
    (30) binary_item -> . DASH

    NEWLINE         shift and go to state 116
    BINARY_VARIABLE shift and go to state 81
    BINARY          shift and go to state 74
    DASH            shift and go to state 71

    formatted_binary_item          shift and go to state 102
    binary_item                    shift and go to state 80

state 94

    (9) name -> DASH NAMESPACE COLON IDENTIFIER NEWLINE .

    DASH            reduce using rule 9 (name -> DASH NAMESPACE COLON IDENTIFIER NEWLINE .)


state 95

    (33) rule_footer -> LBRACKET SLASH RULE RBRACKET . NEWLINE

    NEWLINE         shift and go to state 117


state 96

    (26) include_statement -> DASH INCLUDE COLON list_binary_item NEWLINE .

    LBRACKET        reduce using rule 26 (include_statement -> DASH INCLUDE COLON list_binary_item NEWLINE .)
    DASH            reduce using rule 26 (include_statement -> DASH INCLUDE COLON list_binary_item NEWLINE .)


state 97

    (28) list_binary_item -> list_binary_item binary_item .

    NEWLINE         reduce using rule 28 (list_binary_item -> list_binary_item binary_item .)
    BINARY          reduce using rule 28 (list_binary_item -> list_binary_item binary_item .)
    DASH            reduce using rule 28 (list_binary_item -> list_binary_item binary_item .)


state 98
